--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~ARxQTb5Y#0eNiDKgSpQ3nG5WTaw1Zid7FIKEa_38eYN_z4fivPww"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=50936568512
+SUDO_NUMBER=50936568512
+OWNER_NAME=愛! Sɪʀ┊𝗦𝗔𝗦𝗨𝗞𝗘🪐💤
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
@@ -10,7 +10,7 @@ AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
 STATUS_READ_MSG=Status Viewed by inconnu xd v2
-ANTILINK=false
+ANTILINK=true
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
